Continue refactoring AbstractModel classes: Secret handling, Service Account name, etc.
Signed-off-by: Jakub Scholz <www@scholzj.com>